--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="wrap">
     <header>
       <div>
-        <h1>GitHub Videos Viewer</h1>
+        <h1>GitHub Videos ZEUB</h1>
         <div class="subtitle">Static site to list & play videos hosted in this repo</div>
       </div>
       <div class="controls">
