--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Free Uh-Oh Viewer Project</title>
+  <title>Free Videos Viewer Project</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 </head>
 <body>
   <div class="wrap">
     <header>
       <div>
-        <h1>Free Uh-Oh Viewer Project</h1>
+        <h1>Free Videos Viewer Project</h1>
         <div class="subtitle">Static site to list & play videos hosted externally and provide a nice UI with more control</div>
       </div>
       <div class="controls">
