--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input id="search" type="search" placeholder="Search title or description" />
         <select id="sort">
           <option value="title">Sort: Title</option>
-          <option value="new">Sort: New (manifest order)</option>
+          <option value="new">Sort: Manifest order</option>
         </select>
       </div>
     </header>
@@ -56,7 +56,7 @@
         </div>
       </div>
       <video id="videoPlayer" controls preload="metadata"></video>
-      <div style="font-size:13px;color:var(--muted)" id="modalDesc"></div>
+      <div id="modalDesc"></div>
     </div>
   </div>
 
